Move elements into react file

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,7 @@
 </head>
 <body>
 
-    <div id="app">
-        <div>
-            lucky number 1
-        </div>
-        <div>
-            slide 2
-        </div>
-        <div>
-            number 3
-        </div>
-    </div>
+    <div id="app"></div>
 
 <script type="text/javascript" src="../dist/react-elasticslider.min.js" charset="utf-8"></script>
 <!-- <script src="bower_components/elasticslider-core/dist/elasticslider-core.min.js"></script> -->
