fix dist build process

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -3,12 +3,13 @@
 <head>
     <title>React ElasticSlider</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="react-elasticslider.min.css">
 </head>
 <body>
 
     <div id="app"></div>
 
-<script type="text/javascript" src="../dist/react-elasticslider.min.js" charset="utf-8"></script>
-<!-- <script src="bower_components/elasticslider-core/dist/elasticslider-core.min.js"></script> -->
+<!-- This file should be pointing to external files in context of the build/ folder -->
+<script type="text/javascript" src="react-elasticslider-demo.js" charset="utf-8"></script>
 </body>
 </html>
